tests/NormalTests/paczka1/fuzzy1/41199693.err
Error in line 27: A361
Error in line 3: BE2e8D S492 87,3
